cleanup example rtticontrols grid
 SVN 8012@trunk

--- a/components/rtticontrols/examples/examplegrid1.lfm
+++ b/components/rtticontrols/examples/examplegrid1.lfm
@@ -4,15 +4,15 @@ object Form1: TForm1
   ClientWidth = 400
   OnCreate = Form1Create
   OnDestroy = Form1Destroy
-  OnMouseDown = Form1MouseDown
-  PixelsPerInch = 75
-  HorzScrollBar.Page = 401
-  VertScrollBar.Page = 301
+  PixelsPerInch = 112
+  HorzScrollBar.Page = 399
+  VertScrollBar.Page = 299
   Left = 290
   Height = 300
   Top = 163
   Width = 400
   object TIGrid1: TTIGrid
+    BorderSpacing.OnChange = nil
     BorderStyle = bsSingle
     Color = clWhite
     DefaultRowHeight = 24
@@ -23,27 +23,15 @@ object Form1: TForm1
     Height = 166
     Top = 16
     Width = 316
-    ColWidths = (
-      64
-      64
-      64
-      64
-      64
-    )
-    RowHeights = (
-      24
-      24
-      24
-      24
-      24
-    )
   end
   object TICheckBox1: TTICheckBox
     AutoSize = True
+    BorderSpacing.OnChange = nil
     Caption = 'goColSizing'
     Link.TIObject = TIGrid1
     Link.TIPropertyName = 'Options'
     Link.TIElementName = 'goColSizing'
+    TabOrder = 0
     TabStop = True
     Left = 34
     Height = 23
