enabled lazdoc  from Darius
 SVN 8049@trunk

--- a/ide/lazdocfrm.lfm
+++ b/ide/lazdocfrm.lfm
@@ -1,5 +1,5 @@
 object LazDocForm: TLazDocForm
-  ActiveControl = SeeAlsoTabSheet
+  ActiveControl = ExampleTabSheet
   BorderStyle = bsSizeToolWin
   Caption = 'LazDoc editor'
   ClientHeight = 117
@@ -16,6 +16,7 @@ object LazDocForm: TLazDocForm
   object PageControl: TPageControl
     ActivePage = SeeAlsoTabSheet
     Align = alClient
+    BorderSpacing.OnChange = nil
     TabIndex = 3
     TabOrder = 0
     TabPosition = tpBottom
@@ -30,7 +31,6 @@ object LazDocForm: TLazDocForm
       Width = 728
       object ShortEdit: TEdit
         Align = alTop
-        BorderSpacing.OnChange = nil
         BorderSpacing.Right = 2
         OnChange = DocumentationTagChange
         TabOrder = 0
@@ -47,6 +47,7 @@ object LazDocForm: TLazDocForm
       Width = 728
       object DescrMemo: TMemo
         Align = alClient
+        BorderSpacing.OnChange = nil
         BorderSpacing.Right = 2
         BorderSpacing.Bottom = 4
         Lines.Strings = (
@@ -66,7 +67,6 @@ object LazDocForm: TLazDocForm
       Width = 728
       object ErrorsMemo: TMemo
         Align = alClient
-        BorderSpacing.OnChange = nil
         BorderSpacing.Right = 2
         BorderSpacing.Bottom = 4
         Lines.Strings = (
@@ -84,58 +84,89 @@ object LazDocForm: TLazDocForm
       ClientWidth = 728
       Height = 91
       Width = 728
-      object LinkIdEdit: TEdit
-        BorderSpacing.OnChange = nil
-        TabOrder = 0
-        Text = 'LinkIdEdit'
-        Height = 23
-        Width = 227
-      end
       object LinkListBox: TListBox
         Align = alBottom
         Anchors = [akTop, akLeft, akRight, akBottom]
-        BorderSpacing.OnChange = nil
         BorderSpacing.Right = 2
         BorderSpacing.Bottom = 4
         OnClick = LinkListBoxClick
-        TabOrder = 1
+        TabOrder = 0
         Height = 60
         Top = 27
         Width = 726
       end
       object AddLinkButton: TButton
         Anchors = [akTop, akRight]
-        BorderSpacing.OnChange = nil
+        AutoSize = True
+        BorderSpacing.Right = 6
         Caption = 'AddLinkButton'
         OnClick = AddLinkButtonClick
-        TabOrder = 2
-        Left = 569
+        TabOrder = 1
+        AnchorSideRight.Control = DeleteLinkButton
+        Left = 570
         Height = 23
         Width = 75
       end
       object DeleteLinkButton: TButton
         Anchors = [akTop, akRight]
-        BorderSpacing.OnChange = nil
+        AutoSize = True
         Caption = 'DeleteLinkButton'
         OnClick = DeleteLinkButtonClick
-        TabOrder = 3
+        TabOrder = 2
         Left = 651
         Height = 23
         Width = 75
       end
       object LinkTextEdit: TEdit
-        BorderSpacing.OnChange = nil
-        TabOrder = 4
+        OnChange = LinkChange
+        TabOrder = 3
         Text = 'LinkTextEdit'
         Left = 235
-        Height = 23
+        Height = 21
+        Top = 1
         Width = 328
+      end
+      object LinkIdComboBox: TComboBox
+        BorderSpacing.OnChange = nil
+        MaxLength = 0
+        OnChange = LinkChange
+        TabOrder = 4
+        Text = 'LinkIdComboBox'
+        Height = 21
+        Top = 1
+        Width = 227
+      end
+    end
+    object ExampleTabSheet: TTabSheet
+      Caption = 'ExampleTabSheet'
+      ClientHeight = 91
+      ClientWidth = 728
+      Height = 91
+      Width = 728
+      object ExampleEdit: TEdit
+        Align = alTop
+        BorderSpacing.Right = 2
+        OnChange = DocumentationTagChange
+        TabOrder = 0
+        Text = 'ExampleEdit'
+        Height = 23
+        Width = 726
+      end
+      object BrowseExampleButton: TButton
+        Anchors = [akTop, akRight]
+        AutoSize = True
+        Caption = 'BrowseExampleButton'
+        OnClick = BrowseExampleButtonClick
+        TabOrder = 1
+        Left = 651
+        Height = 25
+        Top = 28
+        Width = 75
       end
     end
   end
   object Panel1: TPanel
     Align = alLeft
-    BorderSpacing.OnChange = nil
     BevelOuter = bvNone
     ClientHeight = 117
     ClientWidth = 17
@@ -147,38 +178,37 @@ object LazDocForm: TLazDocForm
     Width = 17
     object BoldFormatButton: TSpeedButton
       Align = alTop
-      BorderSpacing.OnChange = nil
       Glyph.Data = {
         AA030000424D9903000000000000360000002800000011000000110000000100
         1800000000002101000064000000640000000000000000000000DEEFEFDEEFEF
         DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEF65DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
+        EFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
         DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EF65DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF65DEEFEFDEEFEFDEEFEFDE
+        EF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
+        DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDE
         EFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEF65DEEFEFDEEFEFDEEFEFDEEFEF00000000000000000000
-        0000000000000000000000000000DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF65DEEF
+        DEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEF00000000000000000000
+        0000000000000000000000000000DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEF
         EFDEEFEFDEEFEFDEEFEFDEEFEF000000000000000000DEEFEFDEEFEF00000000
-        0000000000DEEFEFDEEFEFDEEFEFDEEFEF65DEEFEFDEEFEFDEEFEFDEEFEFDEEF
+        0000000000DEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEF
         EF000000000000000000DEEFEFDEEFEF000000000000000000DEEFEFDEEFEFDE
-        EFEFDEEFEF65DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000000000000000DEEF
-        EFDEEFEF000000000000000000DEEFEFDEEFEFDEEFEFDEEFEF65DEEFEFDEEFEF
+        EFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000000000000000DEEF
+        EFDEEFEF000000000000000000DEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEF
         DEEFEFDEEFEFDEEFEF000000000000000000000000000000000000000000DEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEF65DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000
+        EFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000
         000000000000DEEFEFDEEFEF000000000000000000DEEFEFDEEFEFDEEFEFDEEF
-        EF65DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000000000000000DEEFEFDEEFEF
-        000000000000000000DEEFEFDEEFEFDEEFEFDEEFEF65DEEFEFDEEFEFDEEFEFDE
+        EF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000000000000000DEEFEFDEEFEF
+        000000000000000000DEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDE
         EFEFDEEFEF000000000000000000DEEFEFDEEFEF000000000000000000DEEFEF
-        DEEFEFDEEFEFDEEFEF65DEEFEFDEEFEFDEEFEFDEEFEF00000000000000000000
-        0000000000000000000000000000DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF65DEEF
+        DEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEF00000000000000000000
+        0000000000000000000000000000DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEF
         EFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDE
-        EFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF65DEEFEFDEEFEFDEEFEFDEEFEFDEEF
+        EFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEF
         EFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDE
-        EFEFDEEFEF65DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF65DEEFEFDEEFEF
+        EFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
+        EFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEF
         DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEF65
+        EFDEEFEFDEEFEFDEEFEFDEEFEF00
       }
       NumGlyphs = 0
       OnClick = FormatButtonClick
@@ -187,38 +217,37 @@ object LazDocForm: TLazDocForm
     end
     object ItalicFormatButton: TSpeedButton
       Align = alTop
-      BorderSpacing.OnChange = nil
       Glyph.Data = {
         AA030000424D9903000000000000360000002800000011000000110000000100
         1800000000002101000064000000640000000000000000000000DEEFEFDEEFEF
         DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEF65DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
+        EFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
         DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EF65DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF65DEEFEFDEEFEFDEEFEFDE
+        EF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
+        DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDE
         EFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEF65DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDE
-        EFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF65DEEF
+        DEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDE
+        EFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEF
         EFDEEFEFDEEFEFDEEFEF000000000000000000000000000000000000DEEFEFDE
-        EFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF65DEEFEFDEEFEFDEEFEFDEEFEFDEEF
+        EFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEF
         EFDEEFEF000000000000AF9696DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDE
-        EFEFDEEFEF65DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFAF96960000000000
-        00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF65DEEFEFDEEFEF
+        EFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFAF96960000000000
+        00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEF
         DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000000000AF9696DEEFEFDEEFEFDEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEF65DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
+        EFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
         DEEFEFAF9696000000000000DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EF65DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000000000
-        AF9696DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF65DEEFEFDEEFEFDEEFEFDE
+        EF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000000000
+        AF9696DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDE
         EFEFDEEFEFDEEFEFDEEFEFDEEFEFAF9696000000000000DEEFEFDEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEF65DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDE
-        EFEFDEEFEF000000000000AF9696DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF65DEEF
+        DEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDE
+        EFEFDEEFEF000000000000AF9696DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEF
         EFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00000000000000000000
-        0000000000DEEFEFDEEFEFDEEFEFDEEFEF65DEEFEFDEEFEFDEEFEFDEEFEFDEEF
+        0000000000DEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEF
         EFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDE
-        EFEFDEEFEF65DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF65DEEFEFDEEFEF
+        EFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
+        EFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEF
         DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEF65
+        EFDEEFEFDEEFEFDEEFEFDEEFEF00
       }
       NumGlyphs = 0
       OnClick = FormatButtonClick
@@ -229,38 +258,37 @@ object LazDocForm: TLazDocForm
     end
     object UnderlineFormatButton: TSpeedButton
       Align = alTop
-      BorderSpacing.OnChange = nil
       Glyph.Data = {
         AA030000424D9903000000000000360000002800000011000000110000000100
         1800000000002101000064000000640000000000000000000000DEEFEFDEEFEF
         DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEF65DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
+        EFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
         DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EF65DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF65DEEFEFDEEFEFDEEFEFDE
+        EF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
+        DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDE
         EFEF000000000000000000000000000000000000000000000000000000DEEFEF
-        DEEFEFDEEFEFDEEFEF65DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDE
-        EFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF65DEEF
+        DEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDE
+        EFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEF
         EFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000000000000000000000000000DE
-        EFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF65DEEFEFDEEFEFDEEFEFDEEFEFDEEF
+        EFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEF
         EF000000000000848484DEEFEF848484000000000000DEEFEFDEEFEFDEEFEFDE
-        EFEFDEEFEF65DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000000000DEEFEFDEEF
-        EFDEEFEF000000000000DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF65DEEFEFDEEFEF
+        EFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000000000DEEFEFDEEF
+        EFDEEFEF000000000000DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEF
         DEEFEFDEEFEFDEEFEF000000000000DEEFEFDEEFEFDEEFEF000000000000DEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEF65DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000
+        EFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000
         000000DEEFEFDEEFEFDEEFEF000000000000DEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EF65DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000000000DEEFEFDEEFEFDEEFEF
-        000000000000DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF65DEEFEFDEEFEFDEEFEFDE
+        EF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000000000DEEFEFDEEFEFDEEFEF
+        000000000000DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDE
         EFEFDEEFEF000000000000DEEFEFDEEFEFDEEFEF000000000000DEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEF65DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000000000DE
-        EFEFDEEFEFDEEFEF000000000000DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF65DEEF
+        DEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000000000DE
+        EFEFDEEFEFDEEFEF000000000000DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEF
         EFDEEFEFDEEFEFDEEFEF000000000000000000000000DEEFEF00000000000000
-        0000000000DEEFEFDEEFEFDEEFEFDEEFEF65DEEFEFDEEFEFDEEFEFDEEFEFDEEF
+        0000000000DEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEF
         EFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDE
-        EFEFDEEFEF65DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF65DEEFEFDEEFEF
+        EFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
+        EFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEF
         DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEF65
+        EFDEEFEFDEEFEFDEEFEFDEEFEF00
       }
       NumGlyphs = 0
       OnClick = FormatButtonClick
@@ -271,6 +299,7 @@ object LazDocForm: TLazDocForm
     end
     object InsertCodeTagButton: TSpeedButton
       Align = alTop
+      BorderSpacing.OnChange = nil
       Glyph.Data = {
         F90900002F2A2058504D202A2F0D0A7374617469632063686172202A20496E73
         657274436F64655461675F78706D5B5D203D207B0D0A22313720313520313132
@@ -362,6 +391,7 @@ object LazDocForm: TLazDocForm
     end
     object InsertRemarkButton: TSpeedButton
       Align = alTop
+      BorderSpacing.OnChange = nil
       Glyph.Data = {
         D60100002F2A2058504D202A2F0D0A7374617469632063686172202A20496E73
         65727452656D61726B5F78706D5B5D203D207B0D0A2231372031372032203122
@@ -388,6 +418,7 @@ object LazDocForm: TLazDocForm
     end
     object InsertVarTagButton: TSpeedButton
       Align = alTop
+      BorderSpacing.OnChange = nil
       Glyph.Data = {
         D70200002F2A2058504D202A2F0D0A7374617469632063686172202A20496E73
         6572745661725461675F78706D5B5D203D207B0D0A2231372031372031382031
@@ -420,5 +451,13 @@ object LazDocForm: TLazDocForm
       Width = 17
       Tag = 5
     end
+  end
+  object OpenDialog: TOpenDialog
+    Title = 'Open example file'
+    Filter = 'pascal file|*.pas; *.pp; *.p'
+    FilterIndex = 0
+    Title = 'Open example file'
+    left = 64
+    top = 24
   end
 end
